@@ -1,3 +1,8 @@
+2009-09-04  Martin Jambor  <mjambor@suse.cz>
+
+	PR tree-optimization/41112
+	* gnat.dg/array8.adb: New test.
+
 2009-09-03  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/guality/guality.exp: Only run guality tests if a trivial
